--- a/content/課堂補充.html
+++ b/content/課堂補充.html
@@ -156,10 +156,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Develop << <a href='Develop.html'>Previous</a> <a href='w1-w2.html'>Next</a> >> w1-w2<br /><h1>Group2</h1>
-<p>team member</p>
-<p><span>group 2</span><br/><span>Repository:<span> </span></span><a href="https://github.com/50833101/wcmj2020">50833101</a><span><span> </span>| Site:<span> </span></span><a href="https://50833101.github.io/wcmj2020">50833101</a>   許智淵<br/><span>Repository:<span> </span></span><a href="https://github.com/50833107/wcmj2020">50833107</a><span><span> </span>| Site:<span> </span></span><a href="https://50833107.github.io/wcmj2020">50833107</a>   許瑋宸<br/><span>Repository:<span> </span></span><a href="https://github.com/50833108/wcmj2020">50833108</a><span><span> </span>| Site:<span> </span></span><a href="https://50833108.github.io/wcmj2020">50833108</a>   廖偵佑<br/><span>Repository:<span> </span></span><a href="https://github.com/50833111/wcmj2020">50833111</a><span><span> </span>| Site:<span> </span></span><a href="https://50833111.github.io/wcmj2020">50833111</a>    施奕宏<br/><span>Repository:<span> </span></span><a href="https://github.com/50833117/wcmj2020">50833117</a><span><span> </span>| Site:<span> </span></span><a href="https://50833117.github.io/wcmj2020">50833117</a>    陳智揚<br/><span>Repository:<span> </span></span><a href="https://github.com/50833119/wcmj2020">50833119</a><span><span> </span>| Site:<span> </span></span><a href="https://50833119.github.io/wcmj2020">50833119</a>    廖翊丞<br/><span>Repository:<span> </span></span><a href="https://github.com/50833122/wcmj2020">50833122</a><span><span> </span>| Site:<span> </span></span><a href="https://50833122.github.io/wcmj2020">50833122</a>   陳柏均<br/><span>Repository:<span> </span></span><a href="https://github.com/50833126/wcmj2020">50833126</a><span><span> </span>| Site:<span> </span></span><a href="https://50833126.github.io/wcmj2020">50833126</a>   魏崇智<br/><span>Repository:<span> </span></span><a href="https://github.com/50833130/wcmj2020">50833130</a><span><span> </span>| Site:<span> </span></span><a href="https://50833130.github.io/wcmj2020">50833130</a>   張育銓<br/><span>Repository:<span> </span></span><a href="https://github.com/50833134/wcmj2020">50833134</a><span><span> </span>| Site:<span> </span></span><a href="https://50833134.github.io/wcmj2020">50833134</a>   林昆輝</p>
-<br />Develop << <a href='Develop.html'>Previous</a> <a href='w1-w2.html'>Next</a> >> w1-w2</div>
+    <div id="tipue_search_content">w1-w2 << <a href='w1-w2.html'>Previous</a> <br /><h1>課堂補充</h1>
+<p>inter-net(網際,inter+network)==inter-national<br/>protocol(協定)<br/>tcp/ip == transmision control protocol / internet protocol<br/>IPv4 version(版本) 4 IP 4個區段，用「.」隔開<br/>IPv6 version 6 IP 8個區段，用「:」隔開<br/>中華電信 dns server 2001:b000:168::1<br/>dns == domain name server 符號名稱伺服器</p>
+<p></p>
+<p></p>
+<p></p><br />w1-w2 << <a href='w1-w2.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
