--- a/content/W7-W9.html
+++ b/content/W7-W9.html
@@ -145,7 +145,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='Group2.html'>Group2</a><ul class='dropdown'><li><a href='w1-w2.html'>w1-w2</a><li><a href='課堂補充.html'>課堂補充</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='Group2.html'>Group2</a><ul class='dropdown'><li><a href='w1-w6.html'>w1-w6</a><li><a href='課堂補充.html'>課堂補充</a><li><a href='W7-W9.html'>W7-W9</a></li>
                       </ul>
                 </nav>
               </div>
@@ -156,10 +156,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Group2 << <a href='Group2.html'>Previous</a> <a href='課堂補充.html'>Next</a> >> 課堂補充<br /><h1>w1-w2</h1>
-<h4>type of computer</h4>
-<p>1.super computer (超級電腦)    batch computation(批次運算)<br/>2.mainframe 伺服器主機 (cluster 叢集)<br/>3.server 伺服器 (實體，虛擬)<br/>4.Personal Computer<br/>5.micro controller (微控制器)  rasberry pi 樹莓派 (小PC) embedded 嵌入式<br/>6.Mobile phone (手機)</p>
-<br />Group2 << <a href='Group2.html'>Previous</a> <a href='課堂補充.html'>Next</a> >> 課堂補充</div>
+    <div id="tipue_search_content">課堂補充 << <a href='課堂補充.html'>Previous</a> <br /><h1>W7-W9</h1>
+<p><span>下載可攜程式系統利用  git 指令建立 cmsimde 網站<br/></span></p>
+<p>重新下載<span> </span><a href="https://drive.google.com/open?id=1xDTDfcHU18ipqZNbOufMkSZqibqNeL2T">wcmj2020_tool.7z</a>, 檔案大小為 435 MB, 解開壓縮後為 1.8 GB (其中包括 Mypaint, Dia 與 OBS 等).學會利用 ShareX 與 OBS 拍攝螢幕操作影片, 並將個人維護倉儲與網站的過程影片放入個人網站中.</p>
+<p></p>
+<p></p>
+<p></p>
+<p></p><br />課堂補充 << <a href='課堂補充.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
