--- a/content/w1-w6.html
+++ b/content/w1-w6.html
@@ -156,12 +156,30 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='Group2.html'>Next</a> >> Group2<br /><h1>Develop</h1>
-<p><a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 的開發, 可以在一個目錄中放入 cmsimde, 然後將 up_dir 中的內容放到與 cmsimde 目錄同位階的地方, 使用 command 進入 cmsimde 目錄, 執行 python wsgi.py, 就可以啟動, 以瀏覽器 https://localhost:9443 就可以連接, 以 admin 作為管理者密碼, 就可以登入維護內容.</p>
-<p>cmsimde 的開發採用 Leo Editor, 開啟 cmsimde 目錄中的 cmsimde.leo 就可以進行程式修改, 結束後, 若要保留網際內容, 只要將 cmsimde 外部的內容倒回 up_dir 目錄中即可後續對 cmsimde 遠端倉儲進行改版.</p>
-<p>init.py 位於  up_dir 目錄, 可以設定 site_title 與 uwsgi 等變數.</p>
+    <div id="tipue_search_content">Group2 << <a href='Group2.html'>Previous</a> <a href='課堂補充.html'>Next</a> >> 課堂補充<br /><h1>w1-w6</h1>
+<h4>type of computer</h4>
+<p>1.super computer (超級電腦)    batch computation(批次運算)<br/>2.mainframe 伺服器主機 (cluster 叢集)<br/>3.server 伺服器 (實體，虛擬)<br/>4.Personal Computer<br/>5.micro controller (微控制器)  rasberry pi 樹莓派 (小PC) embedded 嵌入式<br/>6.Mobile phone (手機)</p>
+<h4><span>建立個人Blogger</span></h4>
+<h4><span>建立個人Github帳號</span></h4>
+<h4>建立個人倉儲</h4>
+<h5>step 1  &lt;3</h5>
+<h5>登入 gm 帳號後, 下載<span> </span><a href="https://drive.google.com/open?id=1SvMKQFViJ0mskt20UhSqkjzckB3noSJH" rel="nofollow">https://drive.google.com/open?id=1SvMKQFViJ0mskt20UhSqkjzckB3noSJH</a><span> </span>至 downloads 目錄, 然後以 7zip 解開到 C:\wcmj2020 目錄下</h5>
+<h5>step 2  &lt;3</h5>
+<h5>解開後的目錄為 c:\wcmj2020\wcm2020, 其中有 start.bat 與 stop.bat, 開啟可攜系統時, 以滑鼠點擊 start.bat, 關閉可攜系統時, 以滑鼠點擊 stop.bat</h5>
+<h5>step 3  &lt;3</h5>
+<h5>登入以個人學號所建立的 github 帳號, 然後建立 wcmj2020 倉儲.</h5>
+<h5>step 4  &lt;3</h5>
+<h5>將遠端的 wcmj2020 以 git clone 取下.</h5>
+<h5>git clone<span> </span><a href="https://github.com/%E5%AD%B8%E8%99%9F/wcmj2020.git">https://github.com/學號/wcmj2020.git</a></h5>
+<h5>step 5  &lt;3</h5>
+<h5>git submodule add<span> </span><a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a><span> </span>cmsimde</h5>
+<h5>step 6  &lt;3</h5>
+<h5>進入 cmsimde 以 python wsgi.py 啟動動態系統</h5>
+<h5>以瀏覽器<span> </span><a href="https://localhost:9443/" rel="nofollow">https://localhost:9443</a><span> </span>可以利用 admin 為帳號登入管理</h5>
+<h5>step 7  &lt;3</h5>
+<h5>動態系統維護後, 轉為靜態.再推至遠端</h5>
 <p></p>
-<br />About << <a href='About.html'>Previous</a> <a href='Group2.html'>Next</a> >> Group2</div>
+<br />Group2 << <a href='Group2.html'>Previous</a> <a href='課堂補充.html'>Next</a> >> 課堂補充</div>
         
     <!-- footer -->
       <div class="container">
