--- a/content/課堂補充.html
+++ b/content/課堂補充.html
@@ -145,7 +145,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='Group2.html'>Group2</a><ul class='dropdown'><li><a href='w1-w2.html'>w1-w2</a><li><a href='課堂補充.html'>課堂補充</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='Group2.html'>Group2</a><ul class='dropdown'><li><a href='w1-w6.html'>w1-w6</a><li><a href='課堂補充.html'>課堂補充</a><li><a href='W7-W9.html'>W7-W9</a></li>
                       </ul>
                 </nav>
               </div>
@@ -156,11 +156,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w1-w2 << <a href='w1-w2.html'>Previous</a> <br /><h1>課堂補充</h1>
+    <div id="tipue_search_content">w1-w6 << <a href='w1-w6.html'>Previous</a> <a href='W7-W9.html'>Next</a> >> W7-W9<br /><h1>課堂補充</h1>
 <p>inter-net(網際,inter+network)==inter-national<br/>protocol(協定)<br/>tcp/ip == transmision control protocol / internet protocol<br/>IPv4 version(版本) 4 IP 4個區段，用「.」隔開<br/>IPv6 version 6 IP 8個區段，用「:」隔開<br/>中華電信 dns server 2001:b000:168::1<br/>dns == domain name server 符號名稱伺服器</p>
-<p></p>
-<p></p>
-<p></p><br />w1-w2 << <a href='w1-w2.html'>Previous</a> </div>
+<br />w1-w6 << <a href='w1-w6.html'>Previous</a> <a href='W7-W9.html'>Next</a> >> W7-W9</div>
         
     <!-- footer -->
       <div class="container">
