--- a/content/Group2.html
+++ b/content/Group2.html
@@ -145,7 +145,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='Group2.html'>Group2</a><ul class='dropdown'><li><a href='w1-w2.html'>w1-w2</a><li><a href='課堂補充.html'>課堂補充</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='Group2.html'>Group2</a><ul class='dropdown'><li><a href='w1-w6.html'>w1-w6</a><li><a href='課堂補充.html'>課堂補充</a><li><a href='W7-W9.html'>W7-W9</a></li>
                       </ul>
                 </nav>
               </div>
@@ -156,10 +156,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Develop << <a href='Develop.html'>Previous</a> <a href='w1-w2.html'>Next</a> >> w1-w2<br /><h1>Group2</h1>
+    <div id="tipue_search_content">Develop << <a href='Develop.html'>Previous</a> <a href='w1-w6.html'>Next</a> >> w1-w6<br /><h1>Group2</h1>
 <p>team member</p>
 <p><span>group 2</span><br/><span>Repository:<span> </span></span><a href="https://github.com/50833101/wcmj2020">50833101</a><span><span> </span>| Site:<span> </span></span><a href="https://50833101.github.io/wcmj2020">50833101</a>   許智淵<br/><span>Repository:<span> </span></span><a href="https://github.com/50833107/wcmj2020">50833107</a><span><span> </span>| Site:<span> </span></span><a href="https://50833107.github.io/wcmj2020">50833107</a>   許瑋宸<br/><span>Repository:<span> </span></span><a href="https://github.com/50833108/wcmj2020">50833108</a><span><span> </span>| Site:<span> </span></span><a href="https://50833108.github.io/wcmj2020">50833108</a>   廖偵佑<br/><span>Repository:<span> </span></span><a href="https://github.com/50833111/wcmj2020">50833111</a><span><span> </span>| Site:<span> </span></span><a href="https://50833111.github.io/wcmj2020">50833111</a>    施奕宏<br/><span>Repository:<span> </span></span><a href="https://github.com/50833117/wcmj2020">50833117</a><span><span> </span>| Site:<span> </span></span><a href="https://50833117.github.io/wcmj2020">50833117</a>    陳智揚<br/><span>Repository:<span> </span></span><a href="https://github.com/50833119/wcmj2020">50833119</a><span><span> </span>| Site:<span> </span></span><a href="https://50833119.github.io/wcmj2020">50833119</a>    廖翊丞<br/><span>Repository:<span> </span></span><a href="https://github.com/50833122/wcmj2020">50833122</a><span><span> </span>| Site:<span> </span></span><a href="https://50833122.github.io/wcmj2020">50833122</a>   陳柏均<br/><span>Repository:<span> </span></span><a href="https://github.com/50833126/wcmj2020">50833126</a><span><span> </span>| Site:<span> </span></span><a href="https://50833126.github.io/wcmj2020">50833126</a>   魏崇智<br/><span>Repository:<span> </span></span><a href="https://github.com/50833130/wcmj2020">50833130</a><span><span> </span>| Site:<span> </span></span><a href="https://50833130.github.io/wcmj2020">50833130</a>   張育銓<br/><span>Repository:<span> </span></span><a href="https://github.com/50833134/wcmj2020">50833134</a><span><span> </span>| Site:<span> </span></span><a href="https://50833134.github.io/wcmj2020">50833134</a>   林昆輝</p>
-<br />Develop << <a href='Develop.html'>Previous</a> <a href='w1-w2.html'>Next</a> >> w1-w2</div>
+<br />Develop << <a href='Develop.html'>Previous</a> <a href='w1-w6.html'>Next</a> >> w1-w6</div>
         
     <!-- footer -->
       <div class="container">
