--- a/config/content.htm
+++ b/config/content.htm
@@ -69,7 +69,17 @@
 <p><span>6. 最後再將 wcmj2020 倉儲中 .git 目錄下的 config 檔案中的連線協定, 由 https 改為採 ssh 連線，之後就可以透過近端的 .ppk private key 與 Github.com 上的 public key 對應, 無需輸入帳號密碼就可以進行 git push.了。<br/></span></p>
 <h4><span>Pelican Blog 內容與 Google Blogger 同步<br/></span></h4>
 <p>利用 Windows 10 設定 -&gt; 選擇預設網頁瀏覽器, 使用 Google Chrome 作為預設瀏覽器.</p>
-<p>隨身程式系統必須安裝 <span>google-api-python-client 與 oauth2client</span><br/><br/>pip install google-api-python-client oauth2client<br/><br/>OAuth 2.0 client IDs 程式類別可以選擇 Desktop app<br/><br/>使用者完成 client_secrets.json 設定後, 必須將檔案存在倉儲目錄外部</p>
+<p><span>隨身程式系統必須安裝 </span><span>google-api-python-client 與 oauth2client</span><br/><br/><span>       &lt;pip install google-api-python-client oauth2client&gt;</span><br/><br/></p>
+<p><span>在leo editer 建立add_to_blogger 及edit_to_blogger 兩個按鈕</span></p>
+<p><span>將<a href="http://mde.tw/wcmj2020/content/W12-W13.html">網站</a>上的按鈕內容複製貼上到leo editer 的按鈕內容裡</span></p>
+<p><span>利用學生帳號登入<a href="https://console.developers.google.com/projectselector2/apis/credentials/consent?supportedpurview=project">google blogger api</a></span></p>
+<p>開啟blogger API服務</p>
+<p>建立一個Desktop client 類型的憑證</p>
+<p>並將其儲存成client_secrets.json<br/><br/><span>使用者完成 client_secrets.json 設定後, 必須將檔案存在倉儲目錄外部</span></p>
+<p><span>即可使用add_to_blogger按鈕將網誌新增至google blogger</span></p>
+<p>使用edit_to_blogger按鈕將更新後的網誌同步至google blogger</p>
+<h2>W15-W18</h2>
+<p>期末分組報告，以及個人整理好自己的網站、倉儲，用大概兩分鐘說明自己本學期收穫。</p>
 <p></p>
 <p></p>
 <p></p>
