--- a/content/w1-w6.html
+++ b/content/w1-w6.html
@@ -145,7 +145,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='Group2.html'>Group2</a><ul class='dropdown'><li><a href='w1-w6.html'>w1-w6</a><li><a href='課堂補充.html'>課堂補充</a><li><a href='W7-W9.html'>W7-W9</a><li><a href='W10-W14.html'>W10-W14</a><li><a href='W15-W18.html'>W15-W18</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='Group2.html'>Group2</a><ul class='dropdown'><li><a href='w1-w6.html'>w1-w6</a><li><a href='課堂補充-1.html'>課堂補充-1</a><li><a href='W7-W9.html'>W7-W9</a><li><a href='W10-W14.html'>W10-W14</a><li><a href='W15-W18.html'>W15-W18</a></li></ul><li><a href='課堂補充-2.html'>課堂補充-2</a><li><a href='喵~~.html'>喵~~</a></li>
                       </ul>
                 </nav>
               </div>
@@ -156,7 +156,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Group2 << <a href='Group2.html'>Previous</a> <a href='課堂補充.html'>Next</a> >> 課堂補充<br /><h1>w1-w6</h1>
+    <div id="tipue_search_content">Group2 << <a href='Group2.html'>Previous</a> <a href='課堂補充-1.html'>Next</a> >> 課堂補充-1<br /><h1>w1-w6</h1>
 <h4>type of computer</h4>
 <p>1.super computer (超級電腦)    batch computation(批次運算)<br/>2.mainframe 伺服器主機 (cluster 叢集)<br/>3.server 伺服器 (實體，虛擬)<br/>4.Personal Computer<br/>5.micro controller (微控制器)  rasberry pi 樹莓派 (小PC) embedded 嵌入式<br/>6.Mobile phone (手機)</p>
 <h4><span>建立個人Blogger</span></h4>
@@ -179,7 +179,7 @@ img.add_border {
 <h5>step 7  &lt;3</h5>
 <h5>動態系統維護後, 轉為靜態.再推至遠端</h5>
 <p></p>
-<br />Group2 << <a href='Group2.html'>Previous</a> <a href='課堂補充.html'>Next</a> >> 課堂補充</div>
+<br />Group2 << <a href='Group2.html'>Previous</a> <a href='課堂補充-1.html'>Next</a> >> 課堂補充-1</div>
         
     <!-- footer -->
       <div class="container">
