--- a/content/喵~~.html
+++ b/content/喵~~.html
@@ -156,9 +156,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W10-W14 << <a href='W10-W14.html'>Previous</a> <a href='課堂補充-2.html'>Next</a> >> 課堂補充-2<br /><h1>W15-W18</h1>
-<p>期末分組報告，以及個人整理好自己的網站、倉儲，用大概兩分鐘說明自己本學期收穫。</p>
-<br />W10-W14 << <a href='W10-W14.html'>Previous</a> <a href='課堂補充-2.html'>Next</a> >> 課堂補充-2</div>
+    <div id="tipue_search_content">課堂補充-2 << <a href='課堂補充-2.html'>Previous</a> <br /><h1>喵~~</h1>
+<p><img alt="" height="184" src="./../images/01.jpg" width="274"/></p>
+<p><img alt="" height="225" src="./../images/02.jpg" width="225"/></p>
+<p><img alt="" height="185" src="./../images/03.jpg" width="273"/></p>
+<p><img alt="" height="168" src="./../images/04.jpg" width="300"/></p>
+<p><img alt="" height="163" src="./../images/05.jpg" width="310"/></p>
+<p><img alt="" height="206" src="./../images/06.jpg" width="245"/></p><br />課堂補充-2 << <a href='課堂補充-2.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
