--- a/content/課堂補充-1.html
+++ b/content/課堂補充-1.html
@@ -156,9 +156,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W10-W14 << <a href='W10-W14.html'>Previous</a> <a href='課堂補充-2.html'>Next</a> >> 課堂補充-2<br /><h1>W15-W18</h1>
-<p>期末分組報告，以及個人整理好自己的網站、倉儲，用大概兩分鐘說明自己本學期收穫。</p>
-<br />W10-W14 << <a href='W10-W14.html'>Previous</a> <a href='課堂補充-2.html'>Next</a> >> 課堂補充-2</div>
+    <div id="tipue_search_content">w1-w6 << <a href='w1-w6.html'>Previous</a> <a href='W7-W9.html'>Next</a> >> W7-W9<br /><h1>課堂補充-1</h1>
+<p>inter-net(網際,inter+network)==inter-national<br/>protocol(協定)<br/>tcp/ip == transmision control protocol / internet protocol<br/>IPv4 version(版本) 4 IP 4個區段，用「.」隔開<br/>IPv6 version 6 IP 8個區段，用「:」隔開<br/>中華電信 dns server 2001:b000:168::1<br/>dns == domain name server 符號名稱伺服器</p>
+<br />w1-w6 << <a href='w1-w6.html'>Previous</a> <a href='W7-W9.html'>Next</a> >> W7-W9</div>
         
     <!-- footer -->
       <div class="container">
